# meson-example-project

./: README.md  meson.build
src/: main.cpp  meson.build
subprojects/libexample/: meson.build
subprojects/libexample/include/: api.h  example.h  meson.build
subprojects/libexample/src/: example.cpp  meson.build
tests/: meson.build
